--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-mask-text": "^0.14.2",
     "react-native-modalize": "^2.1.1",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
